# peano.hs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  peano.cabal
.github/workflows/: haskell-ci.yml
Data/: Peano.hs
bench/: Main.hs
