cabal-version:       1.18
name:                peano
version:             0.1.0.2
synopsis:            Peano numbers
description:         Lazy unary natural numbers.
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          Andreas Abel
category:            Data, Math
build-type:          Simple

tested-with:
  GHC == 9.8.1
  GHC == 9.6.3
  GHC == 9.4.7
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

extra-doc-files:
  CHANGELOG.md
library
  exposed-modules:     Data.Peano
  default-language:    Haskell2010
  default-extensions:  DeriveDataTypeable
  build-depends:       base >= 4.9 && < 5
  ghc-options:
    -Wall
    -Wcompat

source-repository head
  type:     git
  location: https://github.com/andreasabel/peano.hs
